<resources>

    <!-- app level -->
    <string name="app_name">DiveHub</string>

    <!-- dive level -->
    <string name="title_dive_detail">Dive Detail</string>
    <string name="title_dive_list">Dives</string>
    <string name="date">Dive Date</string>
    <string name="time">Dive Time</string>
    <string name="number">Dive Number</string>
    <string name="site">Dive Site</string>
    <string name="buddy">Dive Buddy</string>
    <string name="divemaster">Dive Master</string>
    <string name="comments">Comments</string>
    <string name="depth">Maximum Depth</string>
    <string name="depthdefault"></string>
    <string name="duration">Dive Duration (mins)</string>
    <string name="durationdefault"></string>
    <string name="advancedbutton">Adv</string>
    <string name="rebreatherbutton">Rbt</string>
    <string name="commentbutton">Comment</string>
    <string name="signaturebutton">Signature</string>

    <!-- site level -->
    <string name="site_name_text">Dive Site Name</string>
    <string name="site_location_text">Dive Site Location</string>
    <string name="site_country_text">Dive Site Country</string>

    <!-- person level -->
    <string name="person_firstname_text">First Name</string>
    <string name="person_lastname_text">Given Name</string>
    <string name="person_phone_text">Phone Number</string>
    <string name="person_mobile_text">Mobile Number</string>
    <string name="person_email_text">Email</string>

    <!-- signature level -->
    <string name="signature_accept_text">Accept</string>
    <string name="signature_clear_text">Clear</string>
    <string name="signature_hint_text">Write your signature</string>

    <!-- menu level -->
    <string name="menu_settings">Settings</string>
    <string name="menu_insert">Add New Dive</string>
    <string name="menu_delete">Delete Dive</string>
    <string name="menu_accept">Accept</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_sync">Sync Dive Data</string>
    <string name="menu_next">Next Item</string>
    <string name="menu_previous">Previous Item</string>

    <!-- Toasts -->
    <string name="dive_saved_message">Dive has been saved</string>
    <string name="dive_not_save_message">There was a problem - not saved !!</string>
    <string name="dive_in_future_message">Dive is in the future</string>
    <string name="detail_saved_message">Dive Detail has been Saved</string>
    <string name="site_saved_message">Divesite has been saved</string>
    <string name="site_not_save_message">There was a problem - not saved !!</string>

    <!-- Notification Bar -->
    <string name="sync_notification_dives">Sync complete notification</string>
    <string name="notify_sync_message">Synchronisation Complete</string>
    <string name="notify_sync_title">Divehub</string>

    <!-- Alert Dialogs -->
    <string name="dive_delete_title">Dive Delete</string>
    <string name="dive_delete_message">this action will delete the current dive record permanently</string>
    <string name="site_delete_title">Site Delete</string>
    <string name="site_delete_message">this action will delete the current site record permanently</string>
    <string name="person_delete_title">Delete Person</string>
    <string name="person_delete_message">this action will delete the current person record permanently</string>

    <!-- Preferences -->
    <string name="pref_category_date_defaults_key">date_format_defaults</string>
    <string name="pref_category_date_defaults_title">Date Time Formats</string>
    <string name="pref_date_format_key">date_format</string>
    <string name="pref_date_format_dialog_title">Date Format</string>
    <string name="pref_date_format_message">The format used to show dates</string>
    <string name="pref_date_format_summary">Date Format</string>
    <string name="pref_date_format_title">Date Format</string>
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Dive Defaults</string>
    <string name="pref_default_time_from_now_key">Default Time Gap</string>
    <string name="pref_default_time_from_now_dialog_title">Time Before Now</string>
    <string name="pref_default_time_from_now_message">The time before when you are entering the log that is used as the default for dive time.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a dive.</string>
    <string name="pref_default_time_from_now_title">Default Dive Time</string>
    <string name="title_divesite_detail">DiveSIte Detail</string>
    <string name="title_divesite_list">DiveSites</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="title_person_list">People</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signature">SignatureActivity</string>
    <string name="title_activity_divinglog_adapter">DivinglogAdapter</string>
    <string name="title_test_detail">test Detail</string>
    <string name="title_test_list">tests</string>

</resources>